# modtector

./: .cargoignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
docs/: AUC_calculation_methods.md  README.md  commands.md  computational_performance_optimization.md  conf.py  contributing.md  evaluation_algorithms.md  examples.md  index.md  installation.md  norm_method_description.md  norm_method_description_en.md  normalization_algorithms.md  overview.md  plot_visualization_methods.md  quickstart.md  reactivity_method_description.md  requirements.txt  statistical_algorithms.md  troubleshooting.md  user-guide.md
docs/_static/: custom.css
src/: compare.rs  convert.rs  correct.rs  duet.rs  error.rs  evaluate.rs  extract.rs  extract_transcripts.rs  extract_transcripts_main.rs  main.rs  norm.rs  plot.rs  progress.rs  reactivity.rs
