[package]
name = "modtector"
version = "0.9.6"
edition = "2021"
license = "MIT"
authors = ["Tong Zhou <TongZhou2017@github.com>"]
description = "A high-performance modification detection tool in Rust"
repository = "https://github.com/TongZhou2017/modtector"
homepage = "https://github.com/TongZhou2017/modtector"
documentation = "https://modtector.readthedocs.io/"
readme = "README.md"
keywords = ["bioinformatics", "rna", "modification", "detection", "rust", "htslib", "pileup", "reactivity"]
categories = ["science::biology", "development-tools"]

[dependencies]
rust-htslib = "0.47.0"
bio = "2.0.1"
rand = "0.8"
plotters = { version = "0.3", features = ["svg_backend", "bitmap_backend"] }
csv = "1.3"
rayon = "1.8"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
quick-xml = "0.36"
regex = "1.11"


[[bin]]
name = "modtector"
path = "src/main.rs"

[[bin]]
name = "extract_transcripts"
path = "src/extract_transcripts_main.rs"